horizontal scrolling issue fixed

--- a/Desktop/lela/mylela/src/components/Header/Header.css
+++ b/Desktop/lela/mylela/src/components/Header/Header.css
@@ -1,14 +1,14 @@
 .header-container {
   display: flex;
   justify-content: center;
-  width: 100vw;
+  max-width: 100%;
   padding: 30px 60px;
   gap: 25%;
   text-decoration: none;
   font-weight: 400;
   align-items: center;
 }
-.brand h5{
+.brand h5 {
   color: rgb(36, 36, 36);
   font-weight: 600;
   font-size: 24px;
@@ -27,16 +27,16 @@
   border-radius: 10px;
   color: black;
 }
-.btn-join:hover{
+.btn-join:hover {
   background-color: #d4a73c;
 }
 .active {
   display: none;
 }
-.menu:hover{
+.menu:hover {
   color: #20a79e;
 }
-.menu{
+.menu {
   font-weight: 600;
   font-size: 18px;
 }
@@ -52,7 +52,6 @@
     gap: 40px;
     color: #008980;
     align-items: center;
-    
   }
 }
 @media screen and (max-width: 1030px) {
