--- a/Desktop/lela/mylela/src/components/Main/Main.css
+++ b/Desktop/lela/mylela/src/components/Main/Main.css
@@ -1,5 +1,8 @@
 .main-container {
-  width: 100vw;
+  max-width: 100%;
+  /* display: flex;
+  flex-direction: column;
+  align-items: center; */
 }
 .headline-container {
   color: rgb(255, 255, 255);
@@ -7,7 +10,7 @@
   background-position: center !important;
   background-repeat: no-repeat !important;
   background-size: cover !important;
-  width: 100%;
+  max-width: 100%;
   padding: 40px 100px;
   height: 440px;
   max-height: 600px;
@@ -181,6 +184,9 @@
   }
   .headline {
     font-size: 50px;
+  }
+  .differences h1 {
+    font-size: 36px;
   }
 }
 
